# cpp-template

./: cpp_template.c  meson.build
subprojects/: poco-all.wrap  poco-base.wrap  pocoall.wrap
subprojects/packagefiles/poco-all/: meson.build
subprojects/packagefiles/poco-basic/: meson.build
