project('Poco', 'cpp', 'c')
cm_uninstall = custom_target(
  'cm_uninstall',
  input : [],
  output : ['cm_uninstall.h'],
  command : [
    '/Users/johnvishnefske/opt/anaconda3/bin/meson',
    '--internal',
    'cmake_run_ctgt',
    '-o',
    '@OUTPUT@',
    '-d',
    '/Users/johnvishnefske/src/cpp-template/build/subprojects/poco-1.12.4/__CMake_build'
  ],
  depends : []
)
Foundation_dir = include_directories('Foundation/include', 'Foundation/src', '__CMake_build', '.')
Foundation_sys = include_directories(is_system : true)
Foundation_inc = [Foundation_dir, Foundation_sys]
Foundation_src = files(
  'Foundation/src/ASCIIEncoding.cpp',
  'Foundation/src/AbstractObserver.cpp',
  'Foundation/src/ActiveDispatcher.cpp',
  'Foundation/src/ArchiveStrategy.cpp',
  'Foundation/src/Ascii.cpp',
  'Foundation/src/AsyncChannel.cpp',
  'Foundation/src/AtomicCounter.cpp',
  'Foundation/src/AtomicFlag.cpp',
  'Foundation/src/Base32Decoder.cpp',
  'Foundation/src/Base32Encoder.cpp',
  'Foundation/src/Base64Decoder.cpp',
  'Foundation/src/Base64Encoder.cpp',
  'Foundation/src/BinaryReader.cpp',
  'Foundation/src/BinaryWriter.cpp',
  'Foundation/src/Bugcheck.cpp',
  'Foundation/src/ByteOrder.cpp',
  'Foundation/src/Channel.cpp',
  'Foundation/src/Checksum.cpp',
  'Foundation/src/Clock.cpp',
  'Foundation/src/Condition.cpp',
  'Foundation/src/Configurable.cpp',
  'Foundation/src/ConsoleChannel.cpp',
  'Foundation/src/CountingStream.cpp',
  'Foundation/src/DataURIStream.cpp',
  'Foundation/src/DataURIStreamFactory.cpp',
  'Foundation/src/DateTime.cpp',
  'Foundation/src/DateTimeFormat.cpp',
  'Foundation/src/DateTimeFormatter.cpp',
  'Foundation/src/DateTimeParser.cpp',
  'Foundation/src/Debugger.cpp',
  'Foundation/src/DeflatingStream.cpp',
  'Foundation/src/DigestEngine.cpp',
  'Foundation/src/DigestStream.cpp',
  'Foundation/src/DirectoryIterator.cpp',
  'Foundation/src/DirectoryIteratorStrategy.cpp',
  'Foundation/src/DirectoryWatcher.cpp',
  'Foundation/src/Environment.cpp',
  'Foundation/src/Error.cpp',
  'Foundation/src/ErrorHandler.cpp',
  'Foundation/src/Event.cpp',
  'Foundation/src/EventArgs.cpp',
  'Foundation/src/EventChannel.cpp',
  'Foundation/src/Exception.cpp',
  'Foundation/src/FIFOBufferStream.cpp',
  'Foundation/src/FPEnvironment.cpp',
  'Foundation/src/File.cpp',
  'Foundation/src/FileChannel.cpp',
  'Foundation/src/FileStream.cpp',
  'Foundation/src/FileStreamFactory.cpp',
  'Foundation/src/Format.cpp',
  'Foundation/src/Formatter.cpp',
  'Foundation/src/FormattingChannel.cpp',
  'Foundation/src/Glob.cpp',
  'Foundation/src/Hash.cpp',
  'Foundation/src/HashStatistic.cpp',
  'Foundation/src/HexBinaryDecoder.cpp',
  'Foundation/src/HexBinaryEncoder.cpp',
  'Foundation/src/InflatingStream.cpp',
  'Foundation/src/JSONString.cpp',
  'Foundation/src/Latin1Encoding.cpp',
  'Foundation/src/Latin2Encoding.cpp',
  'Foundation/src/Latin9Encoding.cpp',
  'Foundation/src/LineEndingConverter.cpp',
  'Foundation/src/LocalDateTime.cpp',
  'Foundation/src/LogFile.cpp',
  'Foundation/src/LogStream.cpp',
  'Foundation/src/Logger.cpp',
  'Foundation/src/LoggingFactory.cpp',
  'Foundation/src/LoggingRegistry.cpp',
  'Foundation/src/MD4Engine.cpp',
  'Foundation/src/MD5Engine.cpp',
  'Foundation/src/Manifest.cpp',
  'Foundation/src/MemoryPool.cpp',
  'Foundation/src/MemoryStream.cpp',
  'Foundation/src/Message.cpp',
  'Foundation/src/Mutex.cpp',
  'Foundation/src/NamedEvent.cpp',
  'Foundation/src/NamedMutex.cpp',
  'Foundation/src/NestedDiagnosticContext.cpp',
  'Foundation/src/Notification.cpp',
  'Foundation/src/NotificationCenter.cpp',
  'Foundation/src/NotificationQueue.cpp',
  'Foundation/src/NullChannel.cpp',
  'Foundation/src/NullStream.cpp',
  'Foundation/src/NumberFormatter.cpp',
  'Foundation/src/NumberParser.cpp',
  'Foundation/src/NumericString.cpp',
  'Foundation/src/Path.cpp',
  'Foundation/src/PatternFormatter.cpp',
  'Foundation/src/Pipe.cpp',
  'Foundation/src/PipeImpl.cpp',
  'Foundation/src/PipeStream.cpp',
  'Foundation/src/PriorityNotificationQueue.cpp',
  'Foundation/src/Process.cpp',
  'Foundation/src/PurgeStrategy.cpp',
  'Foundation/src/RWLock.cpp',
  'Foundation/src/Random.cpp',
  'Foundation/src/RandomStream.cpp',
  'Foundation/src/RefCountedObject.cpp',
  'Foundation/src/RegularExpression.cpp',
  'Foundation/src/RotateStrategy.cpp',
  'Foundation/src/Runnable.cpp',
  'Foundation/src/SHA1Engine.cpp',
  'Foundation/src/SHA2Engine.cpp',
  'Foundation/src/Semaphore.cpp',
  'Foundation/src/SharedLibrary.cpp',
  'Foundation/src/SharedMemory.cpp',
  'Foundation/src/SignalHandler.cpp',
  'Foundation/src/SimpleFileChannel.cpp',
  'Foundation/src/SortedDirectoryIterator.cpp',
  'Foundation/src/SplitterChannel.cpp',
  'Foundation/src/Stopwatch.cpp',
  'Foundation/src/StreamChannel.cpp',
  'Foundation/src/StreamConverter.cpp',
  'Foundation/src/StreamCopier.cpp',
  'Foundation/src/StreamTokenizer.cpp',
  'Foundation/src/String.cpp',
  'Foundation/src/StringTokenizer.cpp',
  'Foundation/src/SynchronizedObject.cpp',
  'Foundation/src/SyslogChannel.cpp',
  'Foundation/src/Task.cpp',
  'Foundation/src/TaskManager.cpp',
  'Foundation/src/TaskNotification.cpp',
  'Foundation/src/TeeStream.cpp',
  'Foundation/src/TemporaryFile.cpp',
  'Foundation/src/TextBufferIterator.cpp',
  'Foundation/src/TextConverter.cpp',
  'Foundation/src/TextEncoding.cpp',
  'Foundation/src/TextIterator.cpp',
  'Foundation/src/Thread.cpp',
  'Foundation/src/ThreadLocal.cpp',
  'Foundation/src/ThreadPool.cpp',
  'Foundation/src/ThreadTarget.cpp',
  'Foundation/src/TimedNotificationQueue.cpp',
  'Foundation/src/Timer.cpp',
  'Foundation/src/Timespan.cpp',
  'Foundation/src/Timestamp.cpp',
  'Foundation/src/Timezone.cpp',
  'Foundation/src/Token.cpp',
  'Foundation/src/URI.cpp',
  'Foundation/src/URIStreamFactory.cpp',
  'Foundation/src/URIStreamOpener.cpp',
  'Foundation/src/UTF16Encoding.cpp',
  'Foundation/src/UTF32Encoding.cpp',
  'Foundation/src/UTF8Encoding.cpp',
  'Foundation/src/UTF8String.cpp',
  'Foundation/src/UUID.cpp',
  'Foundation/src/UUIDGenerator.cpp',
  'Foundation/src/Unicode.cpp',
  'Foundation/src/UnicodeConverter.cpp',
  'Foundation/src/Var.cpp',
  'Foundation/src/VarHolder.cpp',
  'Foundation/src/VarIterator.cpp',
  'Foundation/src/Void.cpp',
  'Foundation/src/Windows1250Encoding.cpp',
  'Foundation/src/Windows1251Encoding.cpp',
  'Foundation/src/Windows1252Encoding.cpp',
  'Foundation/src/pcre2_auto_possess.c',
  'Foundation/src/pcre2_chartables.c',
  'Foundation/src/pcre2_compile.c',
  'Foundation/src/pcre2_config.c',
  'Foundation/src/pcre2_context.c',
  'Foundation/src/pcre2_convert.c',
  'Foundation/src/pcre2_dfa_match.c',
  'Foundation/src/pcre2_error.c',
  'Foundation/src/pcre2_extuni.c',
  'Foundation/src/pcre2_find_bracket.c',
  'Foundation/src/pcre2_jit_compile.c',
  'Foundation/src/pcre2_maketables.c',
  'Foundation/src/pcre2_match.c',
  'Foundation/src/pcre2_match_data.c',
  'Foundation/src/pcre2_newline.c',
  'Foundation/src/pcre2_ord2utf.c',
  'Foundation/src/pcre2_pattern_info.c',
  'Foundation/src/pcre2_script_run.c',
  'Foundation/src/pcre2_serialize.c',
  'Foundation/src/pcre2_string_utils.c',
  'Foundation/src/pcre2_study.c',
  'Foundation/src/pcre2_substitute.c',
  'Foundation/src/pcre2_substring.c',
  'Foundation/src/pcre2_tables.c',
  'Foundation/src/pcre2_ucd.c',
  'Foundation/src/pcre2_valid_utf.c',
  'Foundation/src/pcre2_xclass.c',
  'Foundation/src/adler32.c',
  'Foundation/src/compress.c',
  'Foundation/src/crc32.c',
  'Foundation/src/deflate.c',
  'Foundation/src/infback.c',
  'Foundation/src/inffast.c',
  'Foundation/src/inflate.c',
  'Foundation/src/inftrees.c',
  'Foundation/src/trees.c',
  'Foundation/src/zutil.c'
)
Foundation = shared_library(
  'Foundation',
  Foundation_src,
  build_by_default : true,
  link_args : [],
  link_with : [],
  include_directories : Foundation_inc,
  install : true,
  override_options : [],
  objects : [],
  install_dir : 'lib',
  cpp_args : [
    '-O2',
    '-g',
    '-DNDEBUG',
    '-arch',
    'arm64',
    '-isysroot',
    '/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk',
    '-DFoundation_EXPORTS',
    '-DPOCO_ENABLE_CPP11',
    '-DPOCO_ENABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX'
  ],
  c_args : [
    '-O2',
    '-g',
    '-DNDEBUG',
    '-arch',
    'arm64',
    '-isysroot',
    '/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk',
    '-DFoundation_EXPORTS',
    '-DPOCO_ENABLE_CPP11',
    '-DPOCO_ENABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX'
  ]
)
Foundation_dep = declare_dependency(
  link_args : [],
  link_with : Foundation,
  compile_args : ['-DPOCO_DISABLE_CPP11', '-DPOCO_DISABLE_CPP14', '-DPOCO_HAVE_IPv6', '-DPOCO_NO_STAT64', '-DPOCO_OS_FAMILY_UNIX'],
  include_directories : Foundation_inc
)
Encodings_dir = include_directories('Encodings/include', 'Encodings/src', 'Foundation/include', '__CMake_build', '.')
Encodings_sys = include_directories(is_system : true)
Encodings_inc = [Encodings_dir, Encodings_sys]
Encodings_src = files(
  'Encodings/src/DoubleByteEncoding.cpp',
  'Encodings/src/Encodings.cpp',
  'Encodings/src/ISO8859_10Encoding.cpp',
  'Encodings/src/ISO8859_11Encoding.cpp',
  'Encodings/src/ISO8859_13Encoding.cpp',
  'Encodings/src/ISO8859_14Encoding.cpp',
  'Encodings/src/ISO8859_16Encoding.cpp',
  'Encodings/src/ISO8859_3Encoding.cpp',
  'Encodings/src/ISO8859_4Encoding.cpp',
  'Encodings/src/ISO8859_5Encoding.cpp',
  'Encodings/src/ISO8859_6Encoding.cpp',
  'Encodings/src/ISO8859_7Encoding.cpp',
  'Encodings/src/ISO8859_8Encoding.cpp',
  'Encodings/src/ISO8859_9Encoding.cpp',
  'Encodings/src/MacCentralEurRomanEncoding.cpp',
  'Encodings/src/MacChineseSimpEncoding.cpp',
  'Encodings/src/MacChineseTradEncoding.cpp',
  'Encodings/src/MacCyrillicEncoding.cpp',
  'Encodings/src/MacJapaneseEncoding.cpp',
  'Encodings/src/MacKoreanEncoding.cpp',
  'Encodings/src/MacRomanEncoding.cpp',
  'Encodings/src/Windows1253Encoding.cpp',
  'Encodings/src/Windows1254Encoding.cpp',
  'Encodings/src/Windows1255Encoding.cpp',
  'Encodings/src/Windows1256Encoding.cpp',
  'Encodings/src/Windows1257Encoding.cpp',
  'Encodings/src/Windows1258Encoding.cpp',
  'Encodings/src/Windows874Encoding.cpp',
  'Encodings/src/Windows932Encoding.cpp',
  'Encodings/src/Windows936Encoding.cpp',
  'Encodings/src/Windows949Encoding.cpp',
  'Encodings/src/Windows950Encoding.cpp'
)
Encodings = shared_library(
  'Encodings',
  Encodings_src,
  build_by_default : true,
  link_args : [],
  link_with : [Foundation],
  include_directories : Encodings_inc,
  install : true,
  override_options : [],
  objects : [],
  install_dir : 'lib',
  cpp_args : [
    '-O2',
    '-g',
    '-DNDEBUG',
    '-arch',
    'arm64',
    '-isysroot',
    '/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk',
    '-DEncodings_EXPORTS',
    '-DPOCO_ENABLE_CPP11',
    '-DPOCO_ENABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX'
  ],
  c_args : []
)
Encodings_dep = declare_dependency(
  link_args : [],
  link_with : Encodings,
  compile_args : ['-DPOCO_DISABLE_CPP11', '-DPOCO_DISABLE_CPP14', '-DPOCO_HAVE_IPv6', '-DPOCO_NO_STAT64', '-DPOCO_OS_FAMILY_UNIX'],
  include_directories : Encodings_inc
)
JSON_dir = include_directories('JSON/include', 'JSON/src', 'Foundation/include', '__CMake_build', '.')
JSON_sys = include_directories(is_system : true)
JSON_inc = [JSON_dir, JSON_sys]
JSON_src = files(
  'JSON/src/Array.cpp',
  'JSON/src/Handler.cpp',
  'JSON/src/JSONException.cpp',
  'JSON/src/Object.cpp',
  'JSON/src/ParseHandler.cpp',
  'JSON/src/Parser.cpp',
  'JSON/src/ParserImpl.cpp',
  'JSON/src/PrintHandler.cpp',
  'JSON/src/Query.cpp',
  'JSON/src/Stringifier.cpp',
  'JSON/src/Template.cpp',
  'JSON/src/TemplateCache.cpp',
  'JSON/src/pdjson.c'
)
JSON = shared_library(
  'JSON',
  JSON_src,
  build_by_default : true,
  link_args : [],
  link_with : [Foundation],
  include_directories : JSON_inc,
  install : true,
  override_options : [],
  objects : [],
  install_dir : 'lib',
  cpp_args : [
    '-O2',
    '-g',
    '-DNDEBUG',
    '-arch',
    'arm64',
    '-isysroot',
    '/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk',
    '-DJSON_EXPORTS',
    '-DPOCO_ENABLE_CPP11',
    '-DPOCO_ENABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX'
  ],
  c_args : [
    '-O2',
    '-g',
    '-DNDEBUG',
    '-arch',
    'arm64',
    '-isysroot',
    '/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk',
    '-DJSON_EXPORTS',
    '-DPOCO_ENABLE_CPP11',
    '-DPOCO_ENABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX'
  ]
)
JSON_dep = declare_dependency(
  link_args : [],
  link_with : JSON,
  compile_args : ['-DPOCO_DISABLE_CPP11', '-DPOCO_DISABLE_CPP14', '-DPOCO_HAVE_IPv6', '-DPOCO_NO_STAT64', '-DPOCO_OS_FAMILY_UNIX'],
  include_directories : JSON_inc
)
Net_dir = include_directories('Net/include', 'Net/src', 'Foundation/include', '__CMake_build', '.')
Net_sys = include_directories(is_system : true)
Net_inc = [Net_dir, Net_sys]
Net_src = files(
  'Net/src/AbstractHTTPRequestHandler.cpp',
  'Net/src/DNS.cpp',
  'Net/src/DatagramSocket.cpp',
  'Net/src/DatagramSocketImpl.cpp',
  'Net/src/DialogSocket.cpp',
  'Net/src/EscapeHTMLStream.cpp',
  'Net/src/FTPClientSession.cpp',
  'Net/src/FTPStreamFactory.cpp',
  'Net/src/FilePartSource.cpp',
  'Net/src/HTMLForm.cpp',
  'Net/src/HTTPAuthenticationParams.cpp',
  'Net/src/HTTPBasicCredentials.cpp',
  'Net/src/HTTPBufferAllocator.cpp',
  'Net/src/HTTPChunkedStream.cpp',
  'Net/src/HTTPClientSession.cpp',
  'Net/src/HTTPCookie.cpp',
  'Net/src/HTTPCredentials.cpp',
  'Net/src/HTTPDigestCredentials.cpp',
  'Net/src/HTTPFixedLengthStream.cpp',
  'Net/src/HTTPHeaderStream.cpp',
  'Net/src/HTTPIOStream.cpp',
  'Net/src/HTTPMessage.cpp',
  'Net/src/HTTPNTLMCredentials.cpp',
  'Net/src/HTTPRequest.cpp',
  'Net/src/HTTPRequestHandler.cpp',
  'Net/src/HTTPRequestHandlerFactory.cpp',
  'Net/src/HTTPResponse.cpp',
  'Net/src/HTTPServer.cpp',
  'Net/src/HTTPServerConnection.cpp',
  'Net/src/HTTPServerConnectionFactory.cpp',
  'Net/src/HTTPServerParams.cpp',
  'Net/src/HTTPServerRequest.cpp',
  'Net/src/HTTPServerRequestImpl.cpp',
  'Net/src/HTTPServerResponse.cpp',
  'Net/src/HTTPServerResponseImpl.cpp',
  'Net/src/HTTPServerSession.cpp',
  'Net/src/HTTPSession.cpp',
  'Net/src/HTTPSessionFactory.cpp',
  'Net/src/HTTPSessionInstantiator.cpp',
  'Net/src/HTTPStream.cpp',
  'Net/src/HTTPStreamFactory.cpp',
  'Net/src/HostEntry.cpp',
  'Net/src/ICMPClient.cpp',
  'Net/src/ICMPEventArgs.cpp',
  'Net/src/ICMPPacket.cpp',
  'Net/src/ICMPPacketImpl.cpp',
  'Net/src/ICMPSocket.cpp',
  'Net/src/ICMPSocketImpl.cpp',
  'Net/src/ICMPv4PacketImpl.cpp',
  'Net/src/IPAddress.cpp',
  'Net/src/IPAddressImpl.cpp',
  'Net/src/MailMessage.cpp',
  'Net/src/MailRecipient.cpp',
  'Net/src/MailStream.cpp',
  'Net/src/MediaType.cpp',
  'Net/src/MessageHeader.cpp',
  'Net/src/MulticastSocket.cpp',
  'Net/src/MultipartReader.cpp',
  'Net/src/MultipartWriter.cpp',
  'Net/src/NTLMCredentials.cpp',
  'Net/src/NTPClient.cpp',
  'Net/src/NTPEventArgs.cpp',
  'Net/src/NTPPacket.cpp',
  'Net/src/NameValueCollection.cpp',
  'Net/src/Net.cpp',
  'Net/src/NetException.cpp',
  'Net/src/NetworkInterface.cpp',
  'Net/src/NullPartHandler.cpp',
  'Net/src/OAuth10Credentials.cpp',
  'Net/src/OAuth20Credentials.cpp',
  'Net/src/POP3ClientSession.cpp',
  'Net/src/PartHandler.cpp',
  'Net/src/PartSource.cpp',
  'Net/src/PartStore.cpp',
  'Net/src/PollSet.cpp',
  'Net/src/QuotedPrintableDecoder.cpp',
  'Net/src/QuotedPrintableEncoder.cpp',
  'Net/src/RawSocket.cpp',
  'Net/src/RawSocketImpl.cpp',
  'Net/src/RemoteSyslogChannel.cpp',
  'Net/src/RemoteSyslogListener.cpp',
  'Net/src/SMTPChannel.cpp',
  'Net/src/SMTPClientSession.cpp',
  'Net/src/SSPINTLMCredentials.cpp',
  'Net/src/ServerSocket.cpp',
  'Net/src/ServerSocketImpl.cpp',
  'Net/src/Socket.cpp',
  'Net/src/SocketAddress.cpp',
  'Net/src/SocketAddressImpl.cpp',
  'Net/src/SocketImpl.cpp',
  'Net/src/SocketNotification.cpp',
  'Net/src/SocketNotifier.cpp',
  'Net/src/SocketProactor.cpp',
  'Net/src/SocketReactor.cpp',
  'Net/src/SocketStream.cpp',
  'Net/src/StreamSocket.cpp',
  'Net/src/StreamSocketImpl.cpp',
  'Net/src/StringPartSource.cpp',
  'Net/src/TCPServer.cpp',
  'Net/src/TCPServerConnection.cpp',
  'Net/src/TCPServerConnectionFactory.cpp',
  'Net/src/TCPServerDispatcher.cpp',
  'Net/src/TCPServerParams.cpp',
  'Net/src/UDPClient.cpp',
  'Net/src/UDPServerParams.cpp',
  'Net/src/WebSocket.cpp',
  'Net/src/WebSocketImpl.cpp'
)
Net = shared_library(
  'Net',
  Net_src,
  build_by_default : true,
  link_args : [],
  link_with : [Foundation],
  include_directories : Net_inc,
  install : true,
  override_options : [],
  objects : [],
  install_dir : 'lib',
  cpp_args : [
    '-O2',
    '-g',
    '-DNDEBUG',
    '-arch',
    'arm64',
    '-isysroot',
    '/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk',
    '-DNet_EXPORTS',
    '-DPOCO_ENABLE_CPP11',
    '-DPOCO_ENABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX'
  ],
  c_args : []
)
Net_dep = declare_dependency(
  link_args : [],
  link_with : Net,
  compile_args : ['-DPOCO_DISABLE_CPP11', '-DPOCO_DISABLE_CPP14', '-DPOCO_HAVE_IPv6', '-DPOCO_NO_STAT64', '-DPOCO_OS_FAMILY_UNIX'],
  include_directories : Net_inc
)
XML_dir = include_directories('XML/include', 'XML/src', 'Foundation/include', '__CMake_build', '.')
XML_sys = include_directories(is_system : true)
XML_inc = [XML_dir, XML_sys]
XML_src = files(
  'XML/src/AbstractContainerNode.cpp',
  'XML/src/AbstractNode.cpp',
  'XML/src/Attr.cpp',
  'XML/src/AttrMap.cpp',
  'XML/src/Attributes.cpp',
  'XML/src/AttributesImpl.cpp',
  'XML/src/CDATASection.cpp',
  'XML/src/CharacterData.cpp',
  'XML/src/ChildNodesList.cpp',
  'XML/src/Comment.cpp',
  'XML/src/ContentHandler.cpp',
  'XML/src/DOMBuilder.cpp',
  'XML/src/DOMException.cpp',
  'XML/src/DOMImplementation.cpp',
  'XML/src/DOMObject.cpp',
  'XML/src/DOMParser.cpp',
  'XML/src/DOMSerializer.cpp',
  'XML/src/DOMWriter.cpp',
  'XML/src/DTDHandler.cpp',
  'XML/src/DTDMap.cpp',
  'XML/src/DeclHandler.cpp',
  'XML/src/DefaultHandler.cpp',
  'XML/src/Document.cpp',
  'XML/src/DocumentEvent.cpp',
  'XML/src/DocumentFragment.cpp',
  'XML/src/DocumentType.cpp',
  'XML/src/Element.cpp',
  'XML/src/ElementsByTagNameList.cpp',
  'XML/src/Entity.cpp',
  'XML/src/EntityReference.cpp',
  'XML/src/EntityResolver.cpp',
  'XML/src/EntityResolverImpl.cpp',
  'XML/src/ErrorHandler.cpp',
  'XML/src/Event.cpp',
  'XML/src/EventDispatcher.cpp',
  'XML/src/EventException.cpp',
  'XML/src/EventListener.cpp',
  'XML/src/EventTarget.cpp',
  'XML/src/InputSource.cpp',
  'XML/src/LexicalHandler.cpp',
  'XML/src/Locator.cpp',
  'XML/src/LocatorImpl.cpp',
  'XML/src/MutationEvent.cpp',
  'XML/src/Name.cpp',
  'XML/src/NamePool.cpp',
  'XML/src/NamedNodeMap.cpp',
  'XML/src/NamespaceStrategy.cpp',
  'XML/src/NamespaceSupport.cpp',
  'XML/src/Node.cpp',
  'XML/src/NodeAppender.cpp',
  'XML/src/NodeFilter.cpp',
  'XML/src/NodeIterator.cpp',
  'XML/src/NodeList.cpp',
  'XML/src/Notation.cpp',
  'XML/src/ParserEngine.cpp',
  'XML/src/ProcessingInstruction.cpp',
  'XML/src/QName.cpp',
  'XML/src/SAXException.cpp',
  'XML/src/SAXParser.cpp',
  'XML/src/Text.cpp',
  'XML/src/TreeWalker.cpp',
  'XML/src/ValueTraits.cpp',
  'XML/src/WhitespaceFilter.cpp',
  'XML/src/XMLException.cpp',
  'XML/src/XMLFilter.cpp',
  'XML/src/XMLFilterImpl.cpp',
  'XML/src/XMLReader.cpp',
  'XML/src/XMLStreamParser.cpp',
  'XML/src/XMLStreamParserException.cpp',
  'XML/src/XMLString.cpp',
  'XML/src/XMLWriter.cpp',
  'XML/src/xmlparse.cpp',
  'XML/src/xmlrole.c',
  'XML/src/xmltok.c',
  'XML/src/xmltok_impl.c',
  'XML/src/xmltok_ns.c'
)
XML = shared_library(
  'XML',
  XML_src,
  build_by_default : true,
  link_args : [],
  link_with : [Foundation],
  include_directories : XML_inc,
  install : true,
  override_options : [],
  objects : [],
  install_dir : 'lib',
  cpp_args : [
    '-O2',
    '-g',
    '-DNDEBUG',
    '-arch',
    'arm64',
    '-isysroot',
    '/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk',
    '-DHAVE_EXPAT_CONFIG_H',
    '-DPOCO_ENABLE_CPP11',
    '-DPOCO_ENABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX',
    '-DXML_DTD',
    '-DXML_EXPORTS',
    '-DXML_NS'
  ],
  c_args : [
    '-O2',
    '-g',
    '-DNDEBUG',
    '-arch',
    'arm64',
    '-isysroot',
    '/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk',
    '-DHAVE_EXPAT_CONFIG_H',
    '-DPOCO_ENABLE_CPP11',
    '-DPOCO_ENABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX',
    '-DXML_DTD',
    '-DXML_EXPORTS',
    '-DXML_NS'
  ]
)
XML_dep = declare_dependency(
  link_args : [],
  link_with : XML,
  compile_args : [
    '-DPOCO_DISABLE_CPP11',
    '-DPOCO_DISABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX',
    '-DXML_DTD'
  ],
  include_directories : XML_inc
)
Util_dir = include_directories(
  'Util/include',
  'Util/src',
  'Foundation/include',
  'XML/include',
  'JSON/include',
  '__CMake_build',
  '.'
)
Util_sys = include_directories(is_system : true)
Util_inc = [Util_dir, Util_sys]
Util_src = files(
  'Util/src/AbstractConfiguration.cpp',
  'Util/src/Application.cpp',
  'Util/src/ConfigurationMapper.cpp',
  'Util/src/ConfigurationView.cpp',
  'Util/src/FilesystemConfiguration.cpp',
  'Util/src/HelpFormatter.cpp',
  'Util/src/IniFileConfiguration.cpp',
  'Util/src/IntValidator.cpp',
  'Util/src/JSONConfiguration.cpp',
  'Util/src/LayeredConfiguration.cpp',
  'Util/src/LocalConfigurationView.cpp',
  'Util/src/LoggingConfigurator.cpp',
  'Util/src/LoggingSubsystem.cpp',
  'Util/src/MapConfiguration.cpp',
  'Util/src/Option.cpp',
  'Util/src/OptionCallback.cpp',
  'Util/src/OptionException.cpp',
  'Util/src/OptionProcessor.cpp',
  'Util/src/OptionSet.cpp',
  'Util/src/PropertyFileConfiguration.cpp',
  'Util/src/RegExpValidator.cpp',
  'Util/src/ServerApplication.cpp',
  'Util/src/Subsystem.cpp',
  'Util/src/SystemConfiguration.cpp',
  'Util/src/Timer.cpp',
  'Util/src/TimerTask.cpp',
  'Util/src/Validator.cpp',
  'Util/src/XMLConfiguration.cpp'
)
Util = shared_library(
  'Util',
  Util_src,
  build_by_default : true,
  link_args : [],
  link_with : [XML, JSON, Foundation],
  include_directories : Util_inc,
  install : true,
  override_options : [],
  objects : [],
  install_dir : 'lib',
  cpp_args : [
    '-O2',
    '-g',
    '-DNDEBUG',
    '-arch',
    'arm64',
    '-isysroot',
    '/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk',
    '-DPOCO_ENABLE_CPP11',
    '-DPOCO_ENABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX',
    '-DUtil_EXPORTS',
    '-DXML_DTD'
  ],
  c_args : []
)
Util_dep = declare_dependency(
  link_args : [],
  link_with : Util,
  compile_args : [
    '-DPOCO_DISABLE_CPP11',
    '-DPOCO_DISABLE_CPP14',
    '-DPOCO_HAVE_IPv6',
    '-DPOCO_NO_STAT64',
    '-DPOCO_OS_FAMILY_UNIX',
    '-DXML_DTD'
  ],
  include_directories : Util_inc
)
